@@ -1,20 +1,0 @@
-<!DOCTYPE HTML>
-
-<html>
-<head>
-
-    <!-- This test is empty for now, as the syntax for exclusions
-     is still under discussion. When we have a new spec draft
-     available this test will define a triangular exclusion on the
-     left side of the window and flow two lines of content next to
-     it. Validation should check that the second line box is
-     positioned farther right and has less width than the first
-     line box (this will be described in the test content, and
-     checked by a DumpRenderTree result) -->
-
-    <style type="text/css">
-    </style>
-</head>
-<body>
-</body>
-</html>
